--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^4.19.4
   firebase_core: ^2.30.1
   get: ^4.6.6
+  intl_phone_field: ^3.2.0
 
 dev_dependencies:
   flutter_test:
