--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^2.30.1
   get: ^4.6.6
   intl_phone_field: ^3.2.0
+  cloud_firestore: ^4.17.3
 
 dev_dependencies:
   flutter_test:
